--- a/form.yml
+++ b/form.yml
@@ -1,33 +1,27 @@
 ---
-cluster: "carley"
+cluster: "katana"
 form:
-  - Rserver
-  - Rapp
-  - job_type
+  - version
   - bc_num_hours
+  - num_cores
   - bc_email_on_started
 attributes:
-  Rserver: "rstudio-server/1.3.959"
-  bc_num_hours:
-    min: 1
-    max: 8
-    step: 1
-  job_type:
-    widget: select
-    label: "Instance type"
+  num_cores:
+    widget: "number_field"
+    label: "Number of cores"
+    value: 1
     help: |
-      - **Quick** - (*2 cores, 4GB memory*)
-      - **General Purpose** - (*4 cores, 20GB memory*)
-      - **Compute Optimized** - (*8 cores, 64GB memory*)
-      - **Memory Optimized** - (*8 cores, 256GB memory*)
-    options:
-      - [ "Quick", "quick" ]
-      - [ "General Purpose", "small" ]
-      - [ "Compute Optimized", "medium" ]
-      - [ "Memory Optimized", "large" ]
-  Rapp:
+      Number of cores on node type (4 GB per core unless requesting whole
+      node). Leave blank if requesting full node.
+    min: 0
+    max: 28
+    step: 1
+    id: 'num_cores'
+  version:
     widget: select
-    label: "R Version"
+    label: "R version"
+    help: "This defines the version of R you want to load."
     options:
-      - [ "3.5.0", "R/3.5.0" ]
-      - [ "4.0.1", "R/4.0.1" ]
+      - [ "3.6.3", "R/3.6.3"]
+      - [ "3.5.3", "R/3.5.3" ]
+      - [ "3.4.4", "R/3.4.4" ]
