getting ready to deploy

--- a/manifest.yml
+++ b/manifest.yml
@@ -8,4 +8,4 @@ description: |
 
   [RStudio Server]: https://www.rstudio.com/products/rstudio-server/
   [R]: https://www.r-project.org/
-  [Katana cluster]: https://datakid.github.io/restech-docs/using_katana/about_katana.html
+  [Katana cluster]: https://unsw-restech.github.io/restech-docs/using_katana/about_katana.html
