removed bad advice from form

--- a/form.yml
+++ b/form.yml
@@ -12,7 +12,7 @@ attributes:
     value: 4
     help: |
       Number of cores on node type (4 GB per core unless requesting whole
-      node). Leave blank if requesting full node.
+      node).
     min: 0
     max: 28
     step: 1
