--- a/form.yml
+++ b/form.yml
@@ -33,7 +33,10 @@ attributes:
     label: "R version"
     help: "This defines the version of R you want to load."
     options:
-      - [ "4.0.2", "R/4.0.2"]
-      - [ "3.6.3", "R/3.6.3"]
+      - [ "4.0.2", "R/4.0.2" ] 
+      - [ "3.6.3", "R/3.6.3" ]
       - [ "3.5.3", "R/3.5.3" ]
       - [ "3.4.4", "R/3.4.4" ]
+      - [ "4.0.2-gcc7", "gcc/7.5.0 R/4.0.2-gcc7" ]    
+      - [ "3.6.3-gcc7", "gcc/7.5.0 R/3.6.3-gcc7" ]
+      - [ "3.5.3-gcc7", "gcc/7.5.0 R/3.5.3-gcc7" ]
