--- a/form.yml
+++ b/form.yml
@@ -16,7 +16,7 @@ attributes:
     help: |
       Memory requests will affect your wait time. The points at which this happens are 124, 180, 248, 370, 750 and 1000.
   bc_num_hours:
-    help: |
+    help: >-
       <a href="https://unsw-restech.github.io/using_katana/running_jobs.html#tips-for-using-pbs-and-katana-effectively">Tips for using Katana effectively</a>
   num_cores:
     widget: "number_field"
@@ -33,10 +33,10 @@ attributes:
     label: "R version"
     help: "This defines the version of R you want to load."
     options:
-      - [ "4.0.2", "R/4.0.2" ] 
+      - [ "4.0.2", "R/4.0.2" ]
       - [ "3.6.3", "R/3.6.3" ]
       - [ "3.5.3", "R/3.5.3" ]
       - [ "3.4.4", "R/3.4.4" ]
-      - [ "4.0.2-gcc7", "gcc/7.5.0 R/4.0.2-gcc7" ]    
+      - [ "4.0.2-gcc7", "gcc/7.5.0 R/4.0.2-gcc7" ]
       - [ "3.6.3-gcc7", "gcc/7.5.0 R/3.6.3-gcc7" ]
       - [ "3.5.3-gcc7", "gcc/7.5.0 R/3.5.3-gcc7" ]
