--- a/manifest.yml
+++ b/manifest.yml
@@ -4,8 +4,10 @@ category: Interactive Apps
 subcategory: Servers
 role: batch_connect
 description: |
-  This app will launch [RStudio Server] an IDE for [R] on the [Katana cluster].
+  This app will launch [RStudio Server] an IDE for [R] or [Bioconductor]
+  on the [Katana cluster].
 
   [RStudio Server]: https://www.rstudio.com/products/rstudio-server/
   [R]: https://www.r-project.org/
+  [Bioconductor]: https://bioconductor.org/
   [Katana cluster]: https://unsw-restech.github.io/restech-docs
